--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- CARD 1 -->
         <div class="card card-white">
             <a href="https://www.liliputjatek.hu/jatek-autok" target="_blank">
-                <img src="https://images.unsplash.com/photo-1606813902914-ef32c0e1c1d2" alt="Toy Car">
+                <img src="WELLY-McLAREN-GT-ARANY-1-24-UJ-FEM-MODELL-24105-Marka-Welly.jfif" alt="Gold Welly McLaren GT die-cast model car, 1:24 scale, featuring detailed metallic finish and realistic design">
             </a>
             <h3>Toy Car</h3>
             <p>A fun toy car for all ages. Perfect for young adventurers!</p>
@@ -45,7 +45,7 @@
         <!-- CARD 2 -->
         <div class="card card-gray">
             <a href="https://www.liliputjatek.hu/epitojatekok" target="_blank">
-                <img src="https://images.unsplash.com/photo-1604014237800-1c9102c219da" alt="Building Blocks">
+                <img src="Magic-Maze1.png" alt="Colorful building blocks set with interlocking pieces in various bright colors, arranged on a plain surface, designed for creative construction and spatial learning for children">
             </a>
             <h3>Building Blocks</h3>
             <p>Enhance creativity with this set of colorful building blocks!</p>
@@ -60,7 +60,7 @@
             <p class="price">$39.99</p>
             <a class="btn btn-dark" href="https://www.liliputjatek.hu/babahazak" target="_blank">Buy Now</a>
             <a href="https://www.liliputjatek.hu/babahazak" target="_blank">
-                <img src="https://images.unsplash.com/photo-1603816245457-fe9c80b740ff" alt="Dollhouse">
+                <img src="house-dolls-furniture-isolated-on-600nw-2080306441.webp" alt="Dollhouse with miniature rooms, furniture, and doll figures displayed against a white background, designed for imaginative play">
             </a>
         </div>
 
