képek egyenlő nagyságúra vágva

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <!-- CARD 1 -->
         <div class="card card-white">
             <a href="https://www.liliputjatek.hu/jatek-autok" target="_blank">
-                <img src="WELLY-McLAREN-GT-ARANY-1-24-UJ-FEM-MODELL-24105-Marka-Welly.jfif" alt="Gold Welly McLaren GT die-cast model car, 1:24 scale, featuring detailed metallic finish and realistic design">
+                <img class="card-img" src="img/WELLY-McLAREN-GT-ARANY-1-24-UJ-FEM-MODELL-24105-Marka-Welly.jfif"
+                    alt="Gold Welly McLaren GT die-cast model car, 1:24 scale, featuring detailed metallic finish and realistic design">
             </a>
             <h3>Toy Car</h3>
             <p>A fun toy car for all ages. Perfect for young adventurers!</p>
@@ -45,7 +46,8 @@
         <!-- CARD 2 -->
         <div class="card card-gray">
             <a href="https://www.liliputjatek.hu/epitojatekok" target="_blank">
-                <img src="Magic-Maze1.png" alt="Colorful building blocks set with interlocking pieces in various bright colors, arranged on a plain surface, designed for creative construction and spatial learning for children">
+                <img class="card-img" src="img/Magic-Maze1.png"
+                    alt="Colorful building blocks set with interlocking pieces in various bright colors, arranged on a plain surface, designed for creative construction and spatial learning for children">
             </a>
             <h3>Building Blocks</h3>
             <p>Enhance creativity with this set of colorful building blocks!</p>
@@ -60,10 +62,10 @@
             <p class="price">$39.99</p>
             <a class="btn btn-dark" href="https://www.liliputjatek.hu/babahazak" target="_blank">Buy Now</a>
             <a href="https://www.liliputjatek.hu/babahazak" target="_blank">
-                <img src="house-dolls-furniture-isolated-on-600nw-2080306441.webp" alt="Dollhouse with miniature rooms, furniture, and doll figures displayed against a white background, designed for imaginative play">
+                <img class="card-img" src="img/house-dolls-furniture-isolated-on-600nw-2080306441.webp"
+                    alt="Dollhouse with miniature rooms, furniture, and doll figures displayed against a white background, designed for imaginative play">
             </a>
         </div>
-
     </main>
 
     <script src="js/script.js"></script>
