--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="https://www.regiojatek.hu/aruhaz-25-szeged_tisza_part.html">Home</a></li>
+                <li><a id="home" href="https://www.regiojatek.hu/aruhaz-25-szeged_tisza_part.html">Home</a></li>
                 <li><a href="https://www.liliputjatek.hu/">Shop</a></li>
                 <li><a href="https://pottyoszebra.hu/">About</a></li>
                 <li><a href="https://www.abcjatek.hu/">Contact</a></li>
